# synapsys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  docs-version.yml  docs.yml  publish.yml
docs/: color-palette.md  simulators-architecture.md  simview-docs-plan.md
examples/: quickstart.ipynb  quickstart_en.ipynb  quickstart_ptBR.ipynb  simulators_guide_en.ipynb
examples/advanced/: 02a_sil_plant.py  02b_sil_ai_controller.py  03_realtime_scope.py  04_realtime_matplotlib.py
examples/advanced/01_custom_signals/: 01_custom_signals.py  README.md
examples/advanced/02_sil_ai_controller/: 02a_sil_plant.py  02b_sil_ai_controller.py  README.md
examples/advanced/03_realtime_scope/: 03_realtime_scope.py  README.md
examples/advanced/04_realtime_oscilloscope/: 04_realtime_matplotlib.py  README.md
examples/advanced/05_digital_twin/: 05_digital_twin.py  README.md
examples/advanced/06_quadcopter_mimo/: 06a_quadcopter_plant.py  06b_neural_lqr_3d.py  06c_unified_ui.py  IMPROVEMENTS.md  README.md  quadcopter_dynamics.py
examples/basic/: step_response.py
examples/basic/01_step_response/: README.md  step_response.py
examples/distributed/: plant_zmq.py
examples/distributed/01_shared_memory/: README.md  controller.py  plant.py
examples/distributed/02_zmq/: README.md  controller_zmq.py  plant_zmq.py
examples/simulators/: 01_mass_spring_damper.py  02_inverted_pendulum.py  03_cartpole.py  04_integrator_benchmark.py  05_cartpole2d_features.py  06_simview_advanced.py  viz3d_cartpole.py  viz3d_cartpole_qt.py  viz3d_inverted_pendulum.py  viz3d_mass_spring_damper.py  viz3d_msd_qt.py  viz3d_pendulum_qt.py
examples/simulators/temp/: 01_msd_view.py  02_pendulum_view.py  03_cartpole_view.py  04_custom_controllers.py  05_msd_setpoints.py  README.md
scripts/: gen_docs_images.py  gen_neural_lqr_anim.py  gen_quickstart_images.py  inject_gifs_into_docs.sh  optimize_gifs.sh  record_simview_gifs.sh  record_simview_gifs_docs.sh
synapsys/: __init__.py
synapsys/agents/: __init__.py  acl.py  controller_agent.py  hardware_agent.py  lifecycle.py  plant_agent.py  sync_engine.py
synapsys/algorithms/: __init__.py  lqr.py  pid.py
synapsys/api/: __init__.py  matlab_compat.py
synapsys/broker/: __init__.py  broker.py  topic.py
synapsys/broker/backends/: __init__.py  base.py  shared_memory.py  zmq.py
synapsys/core/: __init__.py  lti.py  state_space.py  transfer_function.py  transfer_function_matrix.py
synapsys/hw/: __init__.py  base.py  mock.py
synapsys/simulators/: __init__.py  base.py  cartpole.py  integrators.py  inverted_pendulum.py  mass_spring_damper.py
synapsys/transport/: __init__.py  base.py  network.py  shared_memory.py
synapsys/utils/: __init__.py  builders.py  matrices.py
synapsys/viz/: __init__.py  cartpole2d.py  palette.py
synapsys/viz/simview/: __init__.py  _base.py  cartpole.py  msd.py  pendulum.py
tests/agents/: test_agents.py  test_sync_engine.py
tests/algorithms/: test_lqr.py  test_pid.py
tests/api/: test_feedback.py  test_matlab_compat.py  test_tf_factory.py
tests/broker/: test_broker.py  test_integration.py  test_shared_memory_backend.py  test_topic.py  test_zmq_backend.py
tests/core/: test_discrete.py  test_lti.py  test_state_space.py  test_transfer_function.py  test_transfer_function_matrix.py
tests/hw/: test_mock_hardware.py
tests/simulators/: conftest.py  test_base.py  test_cartpole.py  test_cartpole2d.py  test_integrators.py  test_inverted_pendulum.py  test_mass_spring_damper.py  test_simview.py  test_simview_visual.py
tests/transport/: test_shared_memory.py  test_zmq.py
tests/utils/: test_builders.py  test_matrices.py
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  sync_i18n.py  versions.json
website/blog/: authors.yml  tags.yml
website/blog/2026-04-19-welcome/: index.md
website/blog/2026-04-20-inverted-pendulum-lqr/: index.md
website/blog/2026-04-21-quadcopter-mimo-neural-lqr/: index.md
website/blog/2026-04-22-mil-sil-hil/: index.md
website/blog/2026-04-23-pid-antiwindup-research/: index.md
website/blog/_template-artigo/: index.md
website/blog/_template-post/: index.md
website/docs/: architecture.md  intro.md  roadmap.md
website/docs/api/: agents.md  algorithms.md  core.md  hw.md  matlab-compat.md  transport.md  viz.md
website/docs/examples/: index.md
website/docs/examples/advanced/: custom-signals.md  digital-twin.md  quadcopter-mimo.md  realtime-scope.md  sil-ai-controller.md
website/docs/examples/basic/: step-response.md
website/docs/examples/distributed/: shared-memory.md
website/docs/getting-started/: installation.md  quickstart.md
website/docs/guide/agents/: controller-agent.md  digital-twins.md  hil-sil.md  plant-agent.md
website/docs/guide/algorithms/: lqr.md  pid.md
website/docs/guide/core/: state-space.md  transfer-function.md
website/docs/guide/simulators/: mass-spring-damper.md  overview.md
website/docs/guide/transport/: broker.md  overview.md  shared-memory.md  zmq.md
website/docs/guide/viz/: overview.md  simview.md
website/i18n/pt/: code.json
website/i18n/pt/docusaurus-plugin-content-blog/: authors.yml  tags.yml
website/i18n/pt/docusaurus-plugin-content-docs/: current.json
website/i18n/pt/docusaurus-theme-classic/: navbar.json
website/scripts/: new-content.py
website/src/components/: ControlSystemBackground.tsx  LibraryMap.tsx  MassSpringDamper.tsx  NeuralNetBackground.tsx
website/src/components/HomeBlogSection/: index.tsx
website/src/components/SimulatorsShowcase/: index.tsx
website/src/css/: custom.css
website/src/data/: lqr_sim_data.ts
website/src/pages/: index.tsx
website/versioned_docs/version-0.2.3/: intro.md
website/versioned_docs/version-0.2.4/: architecture.md
website/versioned_docs/version-0.2.6/: intro.md
website/versioned_docs/version-0.2.7/: roadmap.md
website/versioned_sidebars/: version-0.2.3-sidebars.json  version-0.2.7-sidebars.json
(+74 files in other folders)
