[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapsys"
version = "0.1.0"
description = "Modern Python control systems framework with distributed multi-agent simulation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "synapsys contributors" }]
keywords = ["control systems", "simulation", "multi-agent", "LTI", "state-space"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyzmq>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "matplotlib>=3.7",
]


[tool.hatch.version]
path = "synapsys/__init__.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["scipy.*", "zmq.*"]
ignore_missing_imports = true
