[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapsys"
version = "0.2.6"
description = "Modern Python control systems framework with distributed multi-agent simulation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "synapsys contributors" }]
keywords = [
    "control systems", "control theory", "simulation", "multi-agent",
    "LTI", "state-space", "transfer function", "PID", "LQR",
    "MATLAB", "scipy", "real-time", "distributed", "ZeroMQ", "SIL", "HIL",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyzmq>=25.0",
    "pyside6>=6.11.0",
    "pyvistaqt>=0.11.4",
]

[project.urls]
Homepage      = "https://synapsys-lab.github.io/synapsys/"
Repository    = "https://github.com/synapsys-lab/synapsys"
Documentation = "https://synapsys-lab.github.io/synapsys/"
"Bug Tracker" = "https://github.com/synapsys-lab/synapsys/issues"
Changelog     = "https://github.com/synapsys-lab/synapsys/blob/main/CHANGELOG.md"

[project.optional-dependencies]
viz = [
    "pyvista>=0.43",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "matplotlib>=3.7",
    "torch>=2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "ipykernel>=7.2.0",
]


[tool.hatch.version]
path = "synapsys/__init__.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"examples/**"          = ["E402", "E501", "E731", "E741", "E702"]
"scripts/**"           = ["E402", "E501"]
"synapsys/simulators/**" = ["E741", "E501"]
"synapsys/viz/**"      = ["E741"]
"tests/simulators/**"  = ["E741", "E501", "E731"]
"website/**"           = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short --cov=synapsys --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
omit = [
    "synapsys/viz/*",          # Qt + PyVista UI code — requires display
]

[tool.mypy]
python_version = "3.10"
strict = true
disable_error_code = ["type-arg"]   # np.ndarray generic args vary across numpy versions
exclude = ["synapsys/viz/"]         # Qt/vtk/pyvistaqt lack complete stubs

[[tool.mypy.overrides]]
module = ["scipy.*", "zmq.*", "vtk.*", "pyvista.*", "pyvistaqt.*",
          "matplotlib.*", "PySide6.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# numpy return/assignment types vary between stub versions — suppress the two
# error codes that differ between numpy 1.x and 2.x stubs without disabling
# type-safety for the rest of the codebase.
module = ["synapsys.simulators.*"]
disable_error_code = ["no-any-return", "assignment"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
